--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "twig/twig": "^3.3",
         "codeguy/upload": "^1.3",
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "gumlet/php-image-resize": "^2.0"
     },
     "autoload": {
         "psr-4": {
